clusters/cluster1/kubernetes/apps/lightdash/lightdash/app/lightdash-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lightdash
  namespace: lightdash
spec:
  hostnames:
    - lightdash.biggs.dog
  parentRefs:
    - name: wildcard-biggs-dog
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lightdash
          port: 8080
